Fix: dropdowns shouldn't overflow their container

--- a/src/js/backend/jsx/App.less
+++ b/src/js/backend/jsx/App.less
@@ -57,6 +57,7 @@ input {
 
 :global(.p-dropdown) {
   line-height: normal !important;
+  max-width: 100% !important;
 }
 
 :global(.p-multiselect) {
